--- a/index.html
+++ b/index.html
@@ -414,13 +414,14 @@
             top: 331px;
             left: 155px;
             /* opacity: .5; */
-            border: 1px solid red;
+            /* border: 1px solid red; */
             height: 228px;
             width: 240px;
             overflow: hidden;
             animation: tea 1s infinite steps(12);
         }
 
+        /*茶的動畫壞了keyframes?*/
         @keyframes tea {
             from {
                 background-position: 0 0;
